--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
     <div id="results"></div>
   </div>
 
-  <script src="main.js"></script>
+  <script src="https://samin-yasar.github.io/Enigma-Explorer/main.js"></script>
 </body>
 </html>
