--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
     <div id="results"></div>
   </div>
 
-  <!-- Audio -->
+  <!-- 
   <audio id="space-sound" src="https://samin-yasar.github.io/assets/space-hover.mp3" preload="auto"></audio>
+  -->
 
-  <script src="main.js"></script>
+  <script src="https://raw.githubusercontent.com/Samin-yasar/Enigma-Explorer/refs/heads/main/main.js"></script>
 </body>
 </html>
