--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
   <audio id="space-sound" src="https://samin-yasar.github.io/assets/space-hover.mp3" preload="auto"></audio>
   -->
 
-  <script src="https://raw.githubusercontent.com/Samin-yasar/Enigma-Explorer/refs/heads/main/main.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
